--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hellloworld
+  name: helloworld
   labels:
     app: hellloworld
 spec:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
   type: LoadBalancer
   selector:
-    app: hellloworld
+    app: helloworld
